feat: add budget and category.

--- a/app/web/templates/create_ledger.html
+++ b/app/web/templates/create_ledger.html
@@ -54,6 +54,16 @@
                     <label for="note">Note</label>
                 </div>
                 
+                <div class="md-text-field md-text-field-outlined mb-4">
+                    <input
+                        type="text"
+                        name="category"
+                        id="category"
+                        placeholder=" "
+                    />
+                    <label for="category">Category</label>
+                </div>
+                
                 <div class="md-dialog-actions">
                     <button type="button" class="md-btn md-btn-text" onclick="closeCreateLedgerModal()">Cancel</button>
                     <button type="submit" class="md-btn md-btn-filled">
