--- a/app/web/templates/index.html
+++ b/app/web/templates/index.html
@@ -23,6 +23,7 @@
                     <a href="/page/accounts" class="md-btn md-btn-text"> <span class="material-symbols-outlined mr-2">account_balance</span> Accounts </a>
                     <a href="/page/recurring" class="md-btn md-btn-text"> <span class="material-symbols-outlined mr-2">loop</span> Recurring </a>
                     <a href="/page/reminders" class="md-btn md-btn-text"> <span class="material-symbols-outlined mr-2">notifications</span> Reminders </a>
+                    <a href="/page/budgets" class="md-btn md-btn-text"> <span class="material-symbols-outlined mr-2">savings</span> Budgets </a>
                     {{ end }}
                 </div>
 
@@ -64,6 +65,10 @@
                     <a href="/page/reminders" class="md-nav-drawer-item">
                         <span class="material-symbols-outlined md-nav-drawer-item-icon">notifications</span>
                         <span>Reminders</span>
+                    </a>
+                    <a href="/page/budgets" class="md-nav-drawer-item">
+                        <span class="material-symbols-outlined md-nav-drawer-item-icon">savings</span>
+                        <span>Budgets</span>
                     </a>
                     <button hx-post="/logout" hx-target="body" class="md-nav-drawer-item">
                         <span class="material-symbols-outlined md-nav-drawer-item-icon">logout</span>
