--- a/app/web/templates/ledger_list.html
+++ b/app/web/templates/ledger_list.html
@@ -7,6 +7,7 @@
                 <th>Type</th>
                 <th>Amount</th>
                 <th>Note</th>
+                <th>Category</th>
             </tr>
         </thead>
         <tbody>
